# nextjs-graphql-sanic

./: .dockerignore  .gitignore  apollo.config.js  docker-compose.yml  package-lock.json  package.json  pyproject.toml
backend/: app.py  schema.py
docker/backend/: dockerfile
docker/frontend/: dockerfile
frontend/: .env
frontend/pages/: graphql.tsx  index.tsx
frontend/pages/__generated__/: GetGqlData.ts
frontend/types/: globalTypes.ts
