[tool.poetry]
name = "nextjs-graphql-sanic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.*"
Jinja2 = "^2.11.2"
graphql-server = {extras = ["sanic"], version = "^3.0.0-beta.3"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
